# kubernetes-mcp-server

./: README.md  pyproject.toml
k8s_mcp_server/: __init__.py  client.py  config.py  server.py
k8s_mcp_server/resources/: __init__.py  pods.py
