[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kubernetes-mcp-server"
version = "0.1.0"
description = "MCP server for Kubernetes operations"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=0.1.0",
    "kubernetes>=28.0.0",
]

[project.scripts]
k8s-mcp = "k8s_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["k8s_mcp_server"]